# auto-service-knowledge-base

./: .gitignore  README.md
ai-service/: README.md  environment.yml  requirements.txt
ai-service/.claude/: settings.local.json
ai-service/app/: __init__.py  main.py
ai-service/app/api/: ai.py  health.py
ai-service/app/core/: config.py  logging.py
ai-service/app/schemas/: ai.py
ai-service/app/services/: __init__.py  chunker.py  embedding.py  llm.py  parser.py  qa.py  recommend.py  reranker.py  vector_store.py
ai-service/scripts/: mock_asr.py  mock_asr_dialogues.json  validate_index.py  validate_qa.py
ai-service/tests/: test_vector_store_multi.py
docs/: API契约.md  Qt前端视觉风格规范.md  开发进度.md  总体开发计划.md  数据库表清单.md  智能客服知识库系统需求分析与开发计划_Qt.md  首页个性化推荐算法说明.md
docs/superpowers/plans/: 2026-06-29-multi-knowledge-type-vectorstore.md
docs/superpowers/specs/: 2026-06-24-module10-implementation-plan.md  2026-06-24-module10-realtime-agent-assist-design.md  2026-06-29-multi-knowledge-type-vectorstore.md
docs/迁移文档/: Qt全站UI迁移总指南.md  Qt前端样式规范与迁移提示词.md  知识朗读-TTS跨项目迁移指南.md  知识社区与个人中心-跨项目落地指南.md  首页与数据统计-迁移指南.md
knowledgeAnswer/: CMakeLists.txt  main.cpp  resources.qrc
knowledgeAnswer/app/: AgentAssistPage.cpp  AgentAssistPage.h  AiConfigPage.cpp  AiConfigPage.h  Application.cpp  Application.h  ArticleDetailDialog.cpp  ArticleDetailDialog.h  ArticleDetailPanel.cpp  ArticleDetailPanel.h  ArticleEditorDialog.cpp  ArticleEditorDialog.h  ArticleFeedCard.cpp  ArticleFeedCard.h  ArticleManagePage.cpp  ArticleManagePage.h  AuditCenterPage.cpp  AuditCenterPage.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  DashboardPage.cpp  DashboardPage.h  FavoritePage.cpp  FavoritePage.h  KnowledgeBasePage.cpp  KnowledgeBasePage.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  OpenApiPage.cpp  OpenApiPage.h  PageRouter.cpp  PageRouter.h  PinTagsEditDialog.cpp  PinTagsEditDialog.h  PlaceholderPage.cpp  PlaceholderPage.h  ProfilePage.cpp  ProfilePage.h  (+15 more)
knowledgeAnswer/common/: AvatarLabel.cpp  AvatarLabel.h  ChartCard.cpp  ChartCard.h  ChartTheme.cpp  ChartTheme.h  ComboStyle.cpp  ComboStyle.h  NavIcons.cpp  NavIcons.h  NavTreeDelegate.cpp  NavTreeDelegate.h  TableStyle.cpp  TableStyle.h  TagStyle.cpp  TagStyle.h  ThemeIcons.cpp  ThemeIcons.h
knowledgeAnswer/core/auth/: Session.cpp  Session.h
knowledgeAnswer/core/config/: PinnedTagsStore.cpp  PinnedTagsStore.h  Settings.cpp  Settings.h
knowledgeAnswer/core/logging/: Logger.h
knowledgeAnswer/core/network/: ApiClient.cpp  ApiClient.h
knowledgeAnswer/core/notify/: Notify.h
knowledgeAnswer/resources/styles/: app.qss
server/: pom.xml
server/src/main/java/com/kb/: KbApplication.java
server/src/main/java/com/kb/ai/: AiClient.java  AiConfigController.java  AiIndexController.java  ArticleIndexListener.java  AutoRebuildRunner.java  LlmConfigService.java  LlmConfigSyncRunner.java  QaController.java  QaService.java  VectorIndexService.java  package-info.java
server/src/main/java/com/kb/ai/dto/: AiCitation.java  AiIndexRemoveRequest.java  AiIndexRequest.java  AiIndexResponse.java  AiLlmConfigPush.java  AiLlmTestRequest.java  AiLlmTestResponse.java  AiQaRequest.java  AiQaResponse.java  AiRecommendMatchRequest.java  AiRecommendMatchResponse.java  CitationVO.java  FeedbackRequest.java  LlmConfigRequest.java  LlmConfigVO.java  LlmTestVO.java  QaMessageVO.java  QaRequest.java  QaSessionVO.java  QaVO.java
server/src/main/java/com/kb/ai/entity/: AiLlmConfig.java  KbChunk.java  KbVectorIndex.java  QaFeedback.java  QaMessage.java  QaReference.java  QaSession.java
server/src/main/java/com/kb/ai/mapper/: AiLlmConfigMapper.java  KbChunkMapper.java  KbVectorIndexMapper.java  QaFeedbackMapper.java  QaMessageMapper.java  QaReferenceMapper.java  QaSessionMapper.java
server/src/main/java/com/kb/common/: BaseEntity.java  BusinessException.java  GlobalExceptionHandler.java  PageResult.java  Result.java  ResultCode.java  TextUtils.java
server/src/main/java/com/kb/config/: MyBatisPlusConfig.java  MyMetaObjectHandler.java  OpenApiConfig.java  OperationLogConfig.java
server/src/main/java/com/kb/interaction/: InteractionController.java  InteractionService.java  package-info.java
server/src/main/java/com/kb/interaction/dto/: CommentRequest.java  CommentVO.java  FavoriteRequest.java  FavoriteVO.java  InteractionStateVO.java  LikeRequest.java  ShareRequest.java  ShareVO.java  UserOptionVO.java
server/src/main/java/com/kb/interaction/entity/: KbComment.java  KbFavorite.java  KbLike.java  KbShare.java
server/src/main/java/com/kb/knowledge/: package-info.java
server/src/main/java/com/kb/openapi/: OpenApiAuthService.java  OpenApiController.java  OpenAppController.java  OpenAppService.java  package-info.java
server/src/main/java/com/kb/realtime/: RtAsrService.java  RtController.java  RtRecommendService.java  RtSessionService.java  package-info.java
server/src/main/java/com/kb/recommend/: HotScoreCalculator.java  ProfileSegment.java  RecommendController.java  RecommendService.java  UserBehaviorService.java  package-info.java
server/src/main/java/com/kb/search/: package-info.java
server/src/main/java/com/kb/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java  LoginUser.java  SecurityConfig.java  SecurityUtils.java  UserPermissionResolver.java
server/src/main/java/com/kb/statistics/: StatisticsController.java  StatisticsService.java  package-info.java
server/src/main/resources/: application.yml
server/src/main/resources/db/demo/: demo_data.sql  demo_data_batch2.sql  demo_data_community.sql
server/src/main/resources/db/migration/: V10__module9_qa.sql  V11__module9_llm_config.sql  V12__community_profile.sql  V13__community_article_upload.sql  V14__community_draft_edit.sql  V15__module10_realtime_assist.sql  V1__init_schema.sql  V2__seed_rbac.sql  V3__seed_module2_permissions.sql  V4__seed_module3_permissions.sql  V5__seed_module4_permissions.sql  V6__seed_module6_permissions.sql  V7__grant_builtin_roles.sql  V8__grant_statistics.sql  V9__seed_module8_permissions.sql
(+130 files in other folders)
